migration-result/ver/16.x/reference/helm-reference/teleport-plugin-slack.mdx
---
title: teleport-plugin-slack Chart Reference
description: Values that can be set using the teleport-plugin-slack Helm chart
version: '16.x'
---

The `teleport-plugin-slack` Helm chart is used to configure the Slack Teleport plugin, which allows users to receive Access Requests via channels or direct messages in Slack.

You can [browse the source on GitHub](https://github.com/gravitational/teleport-plugins/tree/v15.0.0-dev/charts/access/slack).

This reference details available values for the `teleport-plugin-slack` chart.

<Warning>
  Backing up production instances, environments, and/or settings before making permanent modifications is encouraged as a best practice. Doing so allows you to roll back to an existing state if needed.
</Warning>

## `teleport.address`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `""`          | Yes       |

This parameter contains the host/port combination of the Teleport Proxy
Service (or the Auth Service if you are configuring your plugin to
connect to it directly).

`values.yaml` example:

```yaml
teleport:
  address: "teleport.example.com:3025"
```

## `teleport.identitySecretName`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `""`          | Yes       |

Name of the Kubernetes secret that contains the credentials for the connection
to your Teleport cluster.

The secret should be in the following format:

```yaml
apiVersion: v1
kind: Secret
type: Opaque
metadata:
  name: teleport-plugin-slack-identity
data:
  auth_id: ...
```

Check out the [Access Requests with
Slack](/ver/16.x/access-controls/access-request-plugins/ssh-approval-slack) guide
for more information about how to acquire these credentials.

`values.yaml` example:

```yaml
teleport:
  identitySecretName: "teleport-plugin-slack-identity"
```

## `teleport.identitySecretPath`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `"auth_id"`   | No        |

The key in the Kubernetes secret specified by `teleport.identitySecretName` that holds the
credentials for the connection to your Teleport cluster. If the secret has the path,
`"auth_id"`, you can omit this field.

`values.yaml` example:

```yaml
teleport:
  identitySecretPath: "auth_id"
```

## `slack.token`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `""`          | No        |

Slack token of the bot user to impersonate when sending Access Request
messages. Ignored when `slack.tokenFromSecret` is set.
It's only recommended for testing purposes. Please use
[`slack.tokenFromSecret`](#slacktokenfromsecret) instead.

`values.yaml` example:

```yaml
slack:
  token: "xoxb-1234"
```

## `slack.tokenFromSecret`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `""`          | No        |

Secret containing the Slack token of the bot user.

`values.yaml` example:

```yaml
slack:
  tokenFromSecret: "teleport-slack-plugin-token"
```

## `slack.tokenSecretPath`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `""`          | No        |

Key where the token is located inside the secret specified by `slack.tokenFromSecret`.

`values.yaml` example:

```yaml
slack:
  tokenSecretPath: "token"
```

## `roleToRecipients`

| Type  | Default value | Required? |
| ----- | ------------- | --------- |
| `map` | `{}`          | Yes       |

Mapping of roles to a list of channels and Slack emails. It must contain
a mapping for `*` in case no matching roles are found.

`values.yaml` example:

```yaml
roleToRecipients:
  dev: ["dev-access-requests", "user@example.com"]
  "*": ["access-requests"]
```

## `log.output`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `stdout`      | No        |

Logger output. Could be `stdout`, `stderr` or a file name, eg. `/var/log/teleport/slack.log`

`values.yaml` example:

```yaml
log:
  output: /var/log/teleport/slack.log
```

## `log.severity`

| Type     | Default value | Required? |
| -------- | ------------- | --------- |
| `string` | `INFO`        | No        |

Logger severity. Possible values are `INFO`, `ERROR`, `DEBUG` or `WARN`.

`values.yaml` example:

```yaml
log:
  severity: DEBUG
```

## `annotations.config`

| Type     | Default value | `teleport.yaml` equivalent |
| -------- | ------------- | -------------------------- |
| `object` | `{}`          | None                       |

[Kubernetes reference](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)

Kubernetes annotations which should be applied to the `ConfigMap` created by the chart.

`values.yaml` example:

```yaml
annotations:
  config:
    kubernetes.io/annotation: value
```

## `annotations.deployment`

| Type     | Default value |
| -------- | ------------- |
| `object` | `{}`          |

[Kubernetes reference](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)

Kubernetes annotations which should be applied to the `Deployment` created by the chart.

`values.yaml` example:

```yaml
annotations:
  deployment:
    kubernetes.io/annotation: value
```

## `annotations.pod`

| Type     | Default value |
| -------- | ------------- |
| `object` | `{}`          |

[Kubernetes reference](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)

Kubernetes annotations which should be applied to each `Pod` created by the chart.

`values.yaml` example:

```yaml
annotations:
  pod:
    kubernetes.io/annotation: value
```

## `annotations.secret`

| Type     | Default value |
| -------- | ------------- |
| `object` | `{}`          |

[Kubernetes reference](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/)

Kubernetes annotations which should be applied to the `Secret` created by the chart.

`values.yaml` example:

```yaml
annotations:
  secret:
    kubernetes.io/annotation: value
```
